argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
  namespace: prod
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
